--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       auto2top: true,
       homepage: 'README.md',
       notFoundPage: true,
-      routerMode: 'history',
+      routerMode: 'hash',
       search: {
         maxAge: 86400000,
         paths: 'auto',
