[2026-02-11] frontend: Add 1-minute demo page at /1mindemo

--- a/pitch deck/index.html
+++ b/pitch deck/index.html
@@ -276,19 +276,8 @@ ul.B li::before{content:'';position:absolute;left:0;top:14px;width:6px;height:6p
 <div class="H" style="margin-top:24px"><p><strong style="color:var(--t)">Precedent:</strong> Ethena reached $3.6B TVL in ~5 months. Blast reached $2B+ in 3 months pre-launch. $1B+ within 12 months is achievable.</p></div>
 </div>
 
-<!-- Slide 14: Team -->
+<!-- Slide 14: The Ask -->
 <div class="S" data-s="13">
-<div class="L">Team</div>
-<h2>Execution-first <span class="gt">team</span></h2>
-<div class="g2">
-<div class="K"><div class="kl">Founder & CEO</div><h3 style="margin-bottom:6px">Strategy & Architecture</h3><p class="kd">Deep understanding of DeFi yield mechanics, delta-neutral strategies, and protocol economics. Designed the four-layer architecture and go-to-market strategy from first principles.</p></div>
-<div class="K"><div class="kl">Co-Founder</div><h3 style="margin-bottom:6px">Product & Design</h3><p class="kd">Owns the product experience end-to-end — frontend, terminal dashboard, branding, and user flows. Design-driven approach that sets Kerne apart from typical DeFi interfaces.</p></div>
-</div>
-<div class="H" style="margin-top:16px"><p><strong style="color:var(--t)">20+ contracts across 3 chains, full frontend, SDK, hedging bot, and penetration test — shipped in 6 weeks.</strong> Scaling with seed capital: Senior Solidity Engineer, Full-Stack Developer, Growth Lead, Security Engineer, BD Lead. Target: 8-12 person team by month 9.</p></div>
-</div>
-
-<!-- Slide 15: The Ask -->
-<div class="S" data-s="14">
 <div class="L">The Ask</div>
 <h2>Raising $3–8M at <span class="gt">$40–100M FDV</span></h2>
 <div class="tc">
@@ -305,10 +294,11 @@ ul.B li::before{content:'';position:absolute;left:0;top:14px;width:6px;height:6p
 <div>
 <h3>Use of Funds</h3>
 <div style="margin-top:14px">
-<div class="ai"><div class="ad" style="background:#37d097"></div><div class="an">Engineering</div><div class="ap">35%</div></div>
+<div class="ai"><div class="ad" style="background:#37d097"></div><div class="an">Engineering</div><div class="ap">25%</div></div>
 <div class="ai"><div class="ad" style="background:#ff6b6b"></div><div class="an">Security (audits + bounties)</div><div class="ap">20%</div></div>
 <div class="ai"><div class="ad" style="background:#19b097"></div><div class="an">Growth (incentives + POL)</div><div class="ap">20%</div></div>
 <div class="ai"><div class="ad" style="background:#ffa502"></div><div class="an">Operations (legal + infra)</div><div class="ap">15%</div></div>
+<div class="ai"><div class="ad" style="background:#7b68ee"></div><div class="an">Israel R&D Center</div><div class="ap">10%</div></div>
 <div class="ai"><div class="ad" style="background:#aab9be"></div><div class="an">Reserve buffer</div><div class="ap">10%</div></div>
 </div>
 </div>
@@ -316,10 +306,10 @@ ul.B li::before{content:'';position:absolute;left:0;top:14px;width:6px;height:6p
 <div class="H" style="margin-top:20px"><p><strong style="color:var(--t)">Why now:</strong> Post-halving bull market accelerating. Yield-bearing stablecoin meta proven but no dominant winner. Every week of delay = TVL lost to competitors.</p></div>
 </div>
 
-<!-- Slide 16: Thank You -->
-<div class="S TS" data-s="15">
+<!-- Slide 15: Thank You -->
+<div class="S TS" data-s="14">
 <div class="L">Thank You</div>
-<h1 style="font-size:56px"><span class="gt">kerne.ai</span></h1>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1962 450" style="height:80px;width:auto;fill:#37d097;margin-bottom:16px"><g><polygon points="150 0 0 0 0 150 75 75 150 0"/><polygon points="0 300 0 450 150 450 75 375 0 300"/><polygon points="450 450 450 300 150 225 300 450 450 450"/><polygon points="450 0 300 0 150 225 450 150 450 0"/></g><g><path d="M746.01,240.75l-59.5,65v91h-54.5V46.75h54.5v187l167-187h69.5l-141.5,154.5,153.5,195.51h-66.5l-122.5-156.01Z"/><path d="M932.01,271.25c0-75,51.5-132.5,129.5-132.5s128,56.5,128,127.5c0,7.5-.5,13.5-1.5,21h-204.5c3.5,41.5,32.5,71,83.5,71,37.5,0,61-18.5,71.5-40.5l48,14c-15.5,34-55,71.5-120.5,71.5-78.5,0-134-52.5-134-132.01ZM1138.01,251.75c-3-38.5-30.5-68-76.5-68s-74.51,32.5-78,68.5l154.5-.5Z"/><path d="M1377.01,142.25v49c-53.5-8-86,19-86,92v113.51h-52.5v-251.51h52.5v40c15-30.5,44.5-48.5,86-43Z"/><path d="M1657.5,249.25v147.5h-52v-138.01c0-44-21-71-62-71-44,0-72.5,33.5-72.5,84v125.01h-52.5v-251.51h52.5v37.5c17.5-25,46.5-44,86.51-44,64.5,0,100,42.5,100,110.5Z"/><path d="M1704.49,271.25c0-75,51.5-132.5,129.5-132.5s128,56.5,128,127.5c0,7.5-.5,13.5-1.5,21h-204.5c3.5,41.5,32.5,71,83.5,71,37.5,0,61-18.5,71.5-40.5l48,14c-15.5,34-55,71.5-120.5,71.5-78.5,0-134-52.5-134-132.01ZM1910.5,251.75c-3-38.5-30.5-68-76.5-68s-74.51,32.5-78,68.5l154.5-.5Z"/></g></svg>
 <p class="s" style="margin-top:12px">The omnichain yield-bearing stablecoin.<br>Built for the next $100B in DeFi capital.</p>
 <div class="tm" style="margin-top:32px">
 <span>kerne.ai</span>
